Contrast Mode Experiment

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,8 @@
 
 </head>
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <main>
+    <app-root></app-root>
+  </main>
 </body>
 </html>
