--- a/src/assets/i18n/help/help-en.html
+++ b/src/assets/i18n/help/help-en.html
@@ -1,25 +1,38 @@
 <mat-dialog-content>
 
   <h2>Testheading Level 2</h2>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h2>Testheading Level 2</h2>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h3>Testheading Level 3</h3>
-  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h3>Testheading Level 3</h3>
-  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h2>Testheading Level 2</h2>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
+  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+    it setum don nocter don
+    soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
 </mat-dialog-content>
