--- a/src/assets/i18n/data-protection/data-protection-de.html
+++ b/src/assets/i18n/data-protection/data-protection-de.html
@@ -1,14 +1,15 @@
 <mat-dialog-content>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Dies hier ist ein Beispieltext über fünfzig Wörter. Es dient zur Anschauung von
+  <p>Dies hier ist ein Beispieltext über fünfzig Wörter. Es dient zur Anschauung von
     Textlängen. Denn nicht jeder
+    sdajfhasökdgaskdgflsadglaskdvnsdkjgökdsgfÖKGSADÖKGKJDSAGHÖsakdjg
     Shopbetreiber oder Webdesginer hat eine genaue Vorstellung davon, wie ein Textumfang auf einer Webseite wirkt.
     Textlängen mit bis zu fünfzig Wörtern diesen meist als Kurzbeschreibung oder als Teaser-Text, der neugierig auf
     mehr macht.</p>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Hier sehen Sie einen Beispieltext mit zweihundert Wörtern. Auf Texte mit diesen Umfang
+  <p>Hier sehen Sie einen Beispieltext mit zweihundert Wörtern. Auf Texte mit diesen Umfang
     stoßen Sie im Web, wenn
     Sie beispielsweise eine Kurzmeldung lesen. Aber nicht nur als Kurzmeldungen eignen sich diese Texte. Sie werden
     sie auch als kürzere Produktbeschreibung in Onlineshops entdecken. Meist verwenden Shopsysteme eine
@@ -27,29 +28,29 @@
     Bei so einem Kurztext haben Sie sogar noch die Möglichkeit einen Schlusstext zu formulieren. Auf einer Landingpage
     stehen meist hier Formulierung, die eine Call-To-Action beinhalten. Etwa so: “ Worauf warten Sie noch? Fordern Sie
     jetzt ein aktuelles Angebot unverbindlich an!„</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h3>Testüberschrift Level 3</h3>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h3>Testüberschrift Level 3</h3>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
