--- a/src/assets/i18n/data-protection/data-protection-en.html
+++ b/src/assets/i18n/data-protection/data-protection-en.html
@@ -1,37 +1,37 @@
 <mat-dialog-content>
 
   <h2>Testheading Level 2</h2>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum conventionally nocter don soper dolor it setum don
+  <p>Lorem Ipsmum dolor it setum conventionally nocter don soper dolor it setum don
     nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter
     don soper</p>
 
   <h2>Testheading Level 2</h2>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don conventionally dolor it setum don
+  <p>Lorem Ipsmum dolor it setum don nocter don conventionally dolor it setum don
     nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soperdolor it setum don nocter
     don soper</p>
-  <p class="hyphens" lang="en">Lorem Ipsmum conventionally it setum don
+  <p>Lorem Ipsmum conventionally it setum don
     conventionally don soper dolor it setum don nocter don soperdolor it setum don
     nocter don soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h3>Testheading Level 3</h3>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h3>Testheading Level 3</h3>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h2>Testheading Level 2</h2>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="en">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
