--- a/src/assets/i18n/help/help-de.html
+++ b/src/assets/i18n/help/help-de.html
@@ -1,37 +1,37 @@
 <mat-dialog-content>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
   <h3>Testüberschrift Level 3</h3>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h3>Testüberschrift Level 3</h3>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nosetum don nocter don sit
+  <p>Lorem Ipsmum dolor it setum don nosetum don nocter don sit
     dolor it setum don nocter don soperdolor it setum don nocter don soperdolor</p>
 
   <h2>Testüberschrift Level 2</h2>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
-  <p class="hyphens" lang="de">Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
+  <p>Lorem Ipsmum dolor it setum don nocter don soper dolor it setum don nocter don soperdolor
     it setum don nocter don
     soperdolor it setum don nocter don soperdolor it setum don nocter don soper</p>
 
