Edit german texts from "Sie/Ihr" to "Du/dir/dein"

--- a/src/assets/i18n/data-protection/data-protection-de.html
+++ b/src/assets/i18n/data-protection/data-protection-de.html
@@ -6,7 +6,7 @@
   </p>
 
 <h2>§2 Erheben und Nutzen von Daten</h2>
-  <p>Wir erheben, verarbeiten und nutzen personenbezogene Daten nur, soweit sie für die Begründung, inhaltliche
+  <p>Wir erheben, verarbeiten und nutzen personenbezogene Daten nur, soweit Sie für die Begründung, inhaltliche
     Ausgestaltung und Abwicklung Ihrer Bestellung erforderlich sind (Bestandsdaten). Personenbezogene Daten über die
     Inanspruchnahme von frag.jetzt (Nutzungsdaten) erheben, verarbeiten und nutzen wir nur, soweit dies erforderlich
     ist,
