--- a/src/index.html
+++ b/src/index.html
@@ -47,5 +47,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
