--- a/src/assets/i18n/demo/demo-en.html
+++ b/src/assets/i18n/demo/demo-en.html
@@ -7,8 +7,48 @@
     ></iframe>
   </div>
 </div>
-
+<div id="demoContentTranscript" class="overflow_hide" tabindex="2">
 <h3>
+
+  <p>My name is Klaus Quibeldey-Cirkel. I am a professor of computer science at the Technical University Mittelhessen and project manager of frag.jetzt.
+    In the imprint of the app you can find a detailed description of the project.</p>
+
+  <p>Now to the demo:
+    In frag.jetzt there are three roles: the teacher, the student and the moderator.
+    Accordingly, you will see three browsers in which I will demonstrate the usage scenario of frag.jetzt in the respective role.
+    You can create a session by clicking on the plus button.
+    You give your session a name
+    and that's it!</p>
+
+  <p>You tell your students the session code or the link to the session.
+    As a student I now enter the session code or the link to the session.
+    I could ask a question immediately. But first I would like to bring the moderator of the question board into play:
+    To do this, I go into my session, call up the settings and there the menu item "Questions".
+    By default, moderation is activated and all students' questions are published directly.
+    If a question is to be released by the moderator, the corresponding switch must be flipped.
+    With the threshold value switch I can determine the negative rating above which questions should be displayed.</p>
+  <p>Now I have to add a moderator to my session:
+    To do this, I enter the email address with which he registered at frag.jetzt.
+    I register now as a moderator at the app and go into the session to be moderated.
+    In the lecture I go to the question board of the session in the role of moderator.
+    and in the role of lecturer, waiting for questions from students.
+    As a moderator, I can ban unwanted or inappropriate questions from the question board.
+    I could also mark closed questions (to which I can answer yes or no) with the appropriate icons.
+    and highlight particularly interesting questions with a star.
+    All participants will see these ratings.</p>
+
+  <p>As a lecturer, I can discuss the questions, most of which are highly rated by the students, at the end of the lecture. I click on the question to do this.
+    The question is displayed in full view on the beamer and highlighted in the participants' browsers.
+    A moderator can only ban questions from the question board, not delete them. Only the instructor can do that.</p>
+
+  <p>All other functions, such as sorting and filtering questions or stopping the question stream,
+    you can find out in a playful way by placing two or three browsers next to each other on your laptop and playing through the usage scenario in different roles.
+    How you can use frag.jetzt in your lecture or course during the semester is described below.</p>
+
+  <p> I thank you for your interest in frag.jetzt and look forward to your feedback. You can find my e-mail address in the imprint.</p>
+
+</div>
+<div id="demoContent" tabindex="3">
   »Do you have any questions?«
 </h3>
 
