KeyEvents & TabIndex Base (To-Do: Replace Text)

--- a/src/assets/i18n/demo/demo-en.html
+++ b/src/assets/i18n/demo/demo-en.html
@@ -7,67 +7,104 @@
     ></iframe>
   </div>
 </div>
-
+<div id="demoContentTranscript" class="overflow_hide" tabindex="2">
 <h3>
-  »Do you have any questions?«
+    In both languages German and English:
+    Willkommen zur Demo von frag.jetzt!
+    Mein Name ist Klaus Quibeldey-Cirkel. Ich bin Informatik-Professor an der Technischen Hochschule Mittelhessen und Projektleiter von frag.jetzt.
+    Im Impressum der App finden Sie eine detaillierte  Beschreibung des Projekts.
+    Nun zur Demo:
+    In frag.jetzt gibt es drei Rollen: die Lehrperson, die Studentin oder den Studenten und die Moderatorin oder den den Moderator.
+    Entsprechend sehen Sie drei Browser, in denen ich in in der jeweiligen Rolle das Nutzungs-Szenario von frag.jetzt demonstrieren werde.
+    Eine Sitzung erstellen Sie mit einem Klick auf den Plus-Button.
+    Sie geben Ihrer Sitzung eine Bezeichnung
+    und das war es auch schon!
+    Ihren Studierenden teilen Sie den Sitzungs-Code oder den Link der Sitzung mit.
+    Als Student gebe ich nun den Sitzungs-Code ein oder den Link zur Sitzung.
+    Ich könnte sofort eine Frage stellen. Aber zunächst möchte  ich den Moderator des Fragen-Boards ins Spiel bringen:
+    Dazu gehe ich in meine Sitzung, rufe die Einstellungen auf und dort den Menüpunkt „Fragen“.
+    Standardmäßig ist die Moderation aktiviert und alle Fragen der Studierenden werden direkt veröffentlicht.
+    Wenn die Freigabe einer Frage durch den Moderator erfolgen soll, ist der entsprechende Schalter umzulegen.
+    Mit dem Schwellenwert-Schalter kann ich bestimmen, ab welcher negativen Bewertung Fragen überhaupt angezeigt werden sollen.
+    Nun muss ich noch einen Moderator in meine Sitzung aufnehmen:
+    Dazu trage ich seine Mailadresse ein, mit der er sich bei frag.jetzt registriert hat.
+    Ich melde mich nun als Moderator an der App an und gehe in die zu moderierende Sitzung.
+    In der Vorlesung gehe ich auf das Fragen-Board der Sitzung in der Rolle des Moderators
+    und in der Rolle des Dozenten und warte auf Fragen seitens der Studierenden.
+    Als Moderator kann ich unerwünschte oder nicht zielführende Fragen vom Fragen-Board verbannen.
+    Ich könnte auch geschlossene Fragen (auf die ich mit Ja oder Nein antworten kann)  mit den entsprechenden Icons auszeichnen
+    und besonders interessante Fragen mit einem Stern hervorheben.
+    Alle Teilnehmerinnen und Teilnehmer sehen diese Bewertungen.
+    Als Dozent kann ich die von den Studierenden mehrheitlich hoch bewerteten Fragen am Ende der Vorlesung besprechen. Dazu  klicke ich auf die Frage.
+    Diese wird in Vollansicht am Beamer angezeigt und  in den Browsern der Teilnehmenden  optisch hervorgehoben.
+    Ein Moderator kann Fragen nur vom Fragen-Board verbannen, nicht aber löschen. Das kann nur der Dozent.
+    Alle weiteren Funktionen, wie das Sortieren und Filtern von Fragen oder das Anhalten des Fragen-Streams,
+    können Sie spielerisch herausfinden, indem Sie selbst zwei oder drei Browser auf Ihrem Laptop nebeneinander stellen und das Nutzungs-Szenario in verschiedenen Rollen durchspielen.
+    Wie Sie frag.jetzt in Ihrer Vorlesung oder in Ihrem Kurs über das Semester einsetzen können, beschreibe ich weiter unten.
+    Ich danke Ihnen für Ihr Interesse an frag.jetzt und freue mich über Ihr Feedback. Meine Mailadresse finden Sie im Impressum.
+  </p>
+</div>
+<div id="demoContent" tabindex="3">
+    »Do you have any questions?«
 </h3>
 
-<p>The classical lecture usually ends with: »Do you have any questions?« And always nobody answers or the same few
-  ask. Either nobody dares to ask questions in the large lecture hall or the questions one actually wanted to ask in the
-  course of the lecture are forgotten.
+  <p>The classical lecture usually ends with: »Do you have any questions?« And always nobody answers or the same few
+    ask. Either nobody dares to ask questions in the large lecture hall or the questions one actually wanted to ask in the
+    course of the lecture are forgotten.
 
-<p>Those who want their lecture to be reflected upon and questioned need a
-  tool for anonymously asking questions. Such an <a href="https://github.com/thm-projects/frag.jetzt" target="_blank">Open
-    Source</a> tool is available free of charge with »frag.jetzt«. Are
-  there any concerns? Is the tool accessible, compliant with the data protection regulations, immediately usable with
-  any end device without any training or technical understanding? Three times yes.</p>
+  <p>Those who want their lecture to be reflected upon and questioned need a
+    tool for anonymously asking questions. Such an <a href="https://github.com/thm-projects/frag.jetzt" target="_blank">Open
+      Source</a> tool is available free of charge with »frag.jetzt«. Are
+    there any concerns? Is the tool accessible, compliant with the data protection regulations, immediately usable with
+    any end device without any training or technical understanding? Three times yes.</p>
 
-<p>If I let »frag.jetzt« be used anonymously and thus without social control, don't I also invite abuse? No, because the
-  question list can be moderated live by an assistant: Only lecture-appropriate questions remain on the list.</p>
+  <p>If I let »frag.jetzt« be used anonymously and thus without social control, don't I also invite abuse? No, because the
+    question list can be moderated live by an assistant: Only lecture-appropriate questions remain on the list.</p>
 
-<p>But I cannot answer all questions in the last ten minutes of my lecture. Sure. This is where the collective tool
-  aspect comes into play: Everyone in the audience can rate every question, in other words: to vote up or down. You can
-  answer the questions most highly rated by the auditorium immediately, the others, if you wish, later in the course
-  forum of the learning platform.</p>
+  <p>But I cannot answer all questions in the last ten minutes of my lecture. Sure. This is where the collective tool
+    aspect comes into play: Everyone in the audience can rate every question, in other words: to vote up or down. You can
+    answer the questions most highly rated by the auditorium immediately, the others, if you wish, later in the course
+    forum of the learning platform.</p>
 
 
 <h3>
+    What's so special about »frag.jetzt«?
   What's so special about »frag.jetzt«?
 </h3>
 
-<p>
-  The teacher can award bonus points for goal-oriented and lecture-appropriate questions.
-  Awarded questions receive a yellow star and the student finds an 8-digit token for each star on the session account.
-  The tokens can be redeemed for bonus points by sending an e-mail to the teacher.
-</p>
-<p>
-  Any number of sessions can be created free of charge as a guest or registered user.
-  Only the sessions of registered users remain permanently.
-  Only 180 days after the last use of a session it will be deleted automatically.
-</p>
-<p>
-  »frag.jetzt« was optimized for accessibility with a screen reader and exclusive keyboard control.
-  The user interface meets the requirements of WCAG 2.1 AA.
-  Appropriate display options (»themes«) are available for beamer presentations in large lecture halls and for the
-  visually impaired.
-  In particular, the font size of the questions can be scaled at will.
-</p>
-<p>
-  »frag.jetzt« can be used completely anonymously when registering as a guest.
-  The accounts of registered users are stored and managed in accordance with the data protection regulations of the
-  DSGVO.
-  The program code is »Open Source Software« and can be viewed on GitHub.
-  »frag.jetzt« is operated as free »Software as a Service« by TransMIT GmbH, see imprint.
-</p>
+  <p>
+    The teacher can award bonus points for goal-oriented and lecture-appropriate questions.
+    Awarded questions receive a yellow star and the student finds an 8-digit token for each star on the session account.
+    The tokens can be redeemed for bonus points by sending an e-mail to the teacher.
+  </p>
+  <p>
+    Any number of sessions can be created free of charge as a guest or registered user.
+    Only the sessions of registered users remain permanently.
+    Only 180 days after the last use of a session it will be deleted automatically.
+  </p>
+  <p>
+    »frag.jetzt« was optimized for accessibility with a screen reader and exclusive keyboard control.
+    The user interface meets the requirements of WCAG 2.1 AA.
+    Appropriate display options (»themes«) are available for beamer presentations in large lecture halls and for the
+    visually impaired.
+    In particular, the font size of the questions can be scaled at will.
+  </p>
+  <p>
+    »frag.jetzt« can be used completely anonymously when registering as a guest.
+    The accounts of registered users are stored and managed in accordance with the data protection regulations of the
+    DSGVO.
+    The program code is »Open Source Software« and can be viewed on GitHub.
+    »frag.jetzt« is operated as free »Software as a Service« by TransMIT GmbH, see imprint.
+  </p>
 
 <h3>Mobile phone use in the lecture hall</h3>
 
-<p>
-  The use of the smartphone during the lecture naturally entails a high risk of distraction.
-  We have learned from our many years of experience with audience response systems in lecture halls,
-  see our <a href="https://arsnova.thm.de/blog/en/homepage/" target="_blank">ARSnova Project</a>,
-  how to didactically approach the risk of distraction:
-</p>
+  <p>
+    The use of the smartphone during the lecture naturally entails a high risk of distraction.
+    We have learned from our many years of experience with audience response systems in lecture halls,
+    see our <a href="https://arsnova.thm.de/blog/en/homepage/" target="_blank">ARSnova Project</a>,
+    how to didactically approach the risk of distraction:
+  </p>
 
 <ol>
   <li>
