Added keybinding navigation to intro page

--- a/src/assets/i18n/demo/demo-en.html
+++ b/src/assets/i18n/demo/demo-en.html
@@ -9,40 +9,44 @@
 </div>
 <div id="demoContentTranscript" class="overflow_hide" tabindex="2">
 <h3>
-    In both languages German and English:
-    Willkommen zur Demo von frag.jetzt!
-    Mein Name ist Klaus Quibeldey-Cirkel. Ich bin Informatik-Professor an der Technischen Hochschule Mittelhessen und Projektleiter von frag.jetzt.
-    Im Impressum der App finden Sie eine detaillierte  Beschreibung des Projekts.
-    Nun zur Demo:
-    In frag.jetzt gibt es drei Rollen: die Lehrperson, die Studentin oder den Studenten und die Moderatorin oder den den Moderator.
-    Entsprechend sehen Sie drei Browser, in denen ich in in der jeweiligen Rolle das Nutzungs-Szenario von frag.jetzt demonstrieren werde.
-    Eine Sitzung erstellen Sie mit einem Klick auf den Plus-Button.
-    Sie geben Ihrer Sitzung eine Bezeichnung
-    und das war es auch schon!
-    Ihren Studierenden teilen Sie den Sitzungs-Code oder den Link der Sitzung mit.
-    Als Student gebe ich nun den Sitzungs-Code ein oder den Link zur Sitzung.
-    Ich könnte sofort eine Frage stellen. Aber zunächst möchte  ich den Moderator des Fragen-Boards ins Spiel bringen:
-    Dazu gehe ich in meine Sitzung, rufe die Einstellungen auf und dort den Menüpunkt „Fragen“.
-    Standardmäßig ist die Moderation aktiviert und alle Fragen der Studierenden werden direkt veröffentlicht.
-    Wenn die Freigabe einer Frage durch den Moderator erfolgen soll, ist der entsprechende Schalter umzulegen.
-    Mit dem Schwellenwert-Schalter kann ich bestimmen, ab welcher negativen Bewertung Fragen überhaupt angezeigt werden sollen.
-    Nun muss ich noch einen Moderator in meine Sitzung aufnehmen:
-    Dazu trage ich seine Mailadresse ein, mit der er sich bei frag.jetzt registriert hat.
-    Ich melde mich nun als Moderator an der App an und gehe in die zu moderierende Sitzung.
-    In der Vorlesung gehe ich auf das Fragen-Board der Sitzung in der Rolle des Moderators
-    und in der Rolle des Dozenten und warte auf Fragen seitens der Studierenden.
-    Als Moderator kann ich unerwünschte oder nicht zielführende Fragen vom Fragen-Board verbannen.
-    Ich könnte auch geschlossene Fragen (auf die ich mit Ja oder Nein antworten kann)  mit den entsprechenden Icons auszeichnen
-    und besonders interessante Fragen mit einem Stern hervorheben.
-    Alle Teilnehmerinnen und Teilnehmer sehen diese Bewertungen.
-    Als Dozent kann ich die von den Studierenden mehrheitlich hoch bewerteten Fragen am Ende der Vorlesung besprechen. Dazu  klicke ich auf die Frage.
-    Diese wird in Vollansicht am Beamer angezeigt und  in den Browsern der Teilnehmenden  optisch hervorgehoben.
-    Ein Moderator kann Fragen nur vom Fragen-Board verbannen, nicht aber löschen. Das kann nur der Dozent.
-    Alle weiteren Funktionen, wie das Sortieren und Filtern von Fragen oder das Anhalten des Fragen-Streams,
-    können Sie spielerisch herausfinden, indem Sie selbst zwei oder drei Browser auf Ihrem Laptop nebeneinander stellen und das Nutzungs-Szenario in verschiedenen Rollen durchspielen.
-    Wie Sie frag.jetzt in Ihrer Vorlesung oder in Ihrem Kurs über das Semester einsetzen können, beschreibe ich weiter unten.
-    Ich danke Ihnen für Ihr Interesse an frag.jetzt und freue mich über Ihr Feedback. Meine Mailadresse finden Sie im Impressum.
-  </p>
+
+  <p>My name is Klaus Quibeldey-Cirkel. I am a professor of computer science at the Technical University Mittelhessen and project manager of frag.jetzt.
+    In the imprint of the app you can find a detailed description of the project.</p>
+
+  <p>Now to the demo:
+    In frag.jetzt there are three roles: the teacher, the student and the moderator.
+    Accordingly, you will see three browsers in which I will demonstrate the usage scenario of frag.jetzt in the respective role.
+    You can create a session by clicking on the plus button.
+    You give your session a name
+    and that's it!</p>
+
+  <p>You tell your students the session code or the link to the session.
+    As a student I now enter the session code or the link to the session.
+    I could ask a question immediately. But first I would like to bring the moderator of the question board into play:
+    To do this, I go into my session, call up the settings and there the menu item "Questions".
+    By default, moderation is activated and all students' questions are published directly.
+    If a question is to be released by the moderator, the corresponding switch must be flipped.
+    With the threshold value switch I can determine the negative rating above which questions should be displayed.</p>
+  <p>Now I have to add a moderator to my session:
+    To do this, I enter the email address with which he registered at frag.jetzt.
+    I register now as a moderator at the app and go into the session to be moderated.
+    In the lecture I go to the question board of the session in the role of moderator.
+    and in the role of lecturer, waiting for questions from students.
+    As a moderator, I can ban unwanted or inappropriate questions from the question board.
+    I could also mark closed questions (to which I can answer yes or no) with the appropriate icons.
+    and highlight particularly interesting questions with a star.
+    All participants will see these ratings.</p>
+
+  <p>As a lecturer, I can discuss the questions, most of which are highly rated by the students, at the end of the lecture. I click on the question to do this.
+    The question is displayed in full view on the beamer and highlighted in the participants' browsers.
+    A moderator can only ban questions from the question board, not delete them. Only the instructor can do that.</p>
+
+  <p>All other functions, such as sorting and filtering questions or stopping the question stream,
+    you can find out in a playful way by placing two or three browsers next to each other on your laptop and playing through the usage scenario in different roles.
+    How you can use frag.jetzt in your lecture or course during the semester is described below.</p>
+
+  <p> I thank you for your interest in frag.jetzt and look forward to your feedback. You can find my e-mail address in the imprint.</p>
+
 </div>
 <div id="demoContent" tabindex="3">
     »Do you have any questions?«
@@ -67,10 +71,9 @@
     forum of the learning platform.</p>
 
 
-<h3>
+  <h3>
     What's so special about »frag.jetzt«?
-  What's so special about »frag.jetzt«?
-</h3>
+  </h3>
 
   <p>
     The teacher can award bonus points for goal-oriented and lecture-appropriate questions.
@@ -133,7 +136,7 @@
   </li>
 </ol>
 
- <h2>Questions to the developers of the app</h2>
+ <h3>Questions to the developers of the app</h3>
 
 <p>
     Use session key 11 22 33 44 for questions to the developers.
