remove scroll-bug, imprint header distance

--- a/src/assets/i18n/imprint/imprint-de.html
+++ b/src/assets/i18n/imprint/imprint-de.html
@@ -1,6 +1,6 @@
 <ars-style-typography-material>
 
-  <ars-row [height]="180"></ars-row>
+  <ars-row class="spacer"></ars-row>
 
   <h2 class="typo-main-h space-page-p" tabindex="0">
     Erklärung zur Zugänglichkeit für frag.jetzt
