--- a/src/assets/i18n/imprint/imprint-en.html
+++ b/src/assets/i18n/imprint/imprint-en.html
@@ -1,5 +1,6 @@
 <ars-style-typography-material>
-  <ars-row [height]="180"></ars-row>
+
+  <ars-row class="spacer"></ars-row>
 
   <h2 class="typo-main-h space-page-p" tabindex="0">
     Accessibility Statement for frag.jetzt
