--- a/src/assets/i18n/data-protection/data-protection-de.html
+++ b/src/assets/i18n/data-protection/data-protection-de.html
@@ -1,11 +1,12 @@
-<h3>Grundsatz</h3>
+<div tabindex="0"><h2>Grundsatz</h2>
   <p>Deine personenbezogenen Daten werden vertraulich behandelt. Sämtliche Handlungen sind an die gesetzlichen Grundlagen
     des Hessischen Datenschutzgesetzes (HDSG), des Telemediengesetzes (TMG), der Datenschutz-Grundverordnung der EU
     (EU-DSGVO) sowie dieser Datenschutzerklärung gebunden. Dies wird von der TransMIT GmH als Betreiber von »frag.jetzt«
     garantiert.
   </p>
-
-<h3>Nutzungs&shy;daten</h3>
+</div>
+<div tabindex="0">
+<h2>Nutzungs&shy;daten</h2>
   <p>Personenbezogene Daten über die Inanspruchnahme von »frag.jetzt« (Nutzungsdaten) erheben, verarbeiten und nutzen wir nur, soweit dies erforderlich
     ist, um dem Benutzer die Inanspruchnahme von »frag.jetzt« zu ermöglichen.
     Im Normalfall ist eine Registrierung für die Nutzung von »frag.jetzt« nicht erforderlich.<br>
@@ -18,13 +19,15 @@
     <br>
     Bei Nichtnutzung eines Kontos innerhalb von 180 Tagen wird das Konto automatisch ohne Mitteilung gelöscht.
   </p>
-
-<h3>Zugriffs&shy;daten</h3>
+</div>
+<div tabindex="0">
+<h2>Zugriffs&shy;daten</h2>
   <p> Personenbezogene Daten werden nur im technisch notwendige Umfang von »frag.jetzt« erhoben.
     Außer der Mailadresse als Anmeldename eines registrierten Benutzers werden keine personenbezogenen Daten gespeichert.
   </p>
-
-<h3>Log&shy;-Da&shy;teien</h3>
+</div>
+<div tabindex="0">
+<h2>Log&shy;-Da&shy;teien</h2>
   <p>Wir erheben und speichern automatisch Informationen in Log-Dateien, die dein Browser automatisch an uns übermittelt.
     Dies sind:
 
@@ -36,36 +39,42 @@
     Diese Daten sind nicht bestimmten Personen zuordbar. Eine Zusammenführung dieser Daten mit anderen Datenquellen wird
     nicht vorgenommen.
   </p>
-
-<h3>Web Storage</h3>
+</div>
+<div tabindex="0">
+<h2>Web Storage</h2>
   <p>»frag.jetzt« verwendet die sogenannte Web-Storage-Technik.
     Dabei werden Daten lokal im Cache deines Browsers gespeichert,
     die auch nach dem Schließen des Browser-Fensters oder dem Beenden des Programms – solange du den Cache nicht löscht - weiterhin bestehen und ausgelesen werden können.
   </p>
-
-<h3>Daten&shy;sicherheit</h3>
+</div>
+<div tabindex="0">
+<h2>Daten&shy;sicherheit</h2>
   <p>Es wurden umfangreiche technische und betriebliche Schutzvorkehrungen getroffen, um deine Daten vor zufälligen oder
     vorsätzlichen Manipulationen, Verlust, Zerstörung oder dem Zugriff unberechtigter Personen zu schützen. Die
     Sicherheitsverfahren werden regelmäßig überprüft und dem technologischen Fortschritt angepasst. Datenübertragungen
     im Internet (z. B. bei der Kommunikation per E-Mail) können jedoch Sicherheitslücken aufweisen, sodass ein
     lückenloser Schutz der Daten vor dem Zugriff durch Dritte nicht möglich ist.
   </p>
-
-<h3>Daten&shy;über&shy;mitt&shy;lun&shy;gen an Dritte</h3>
+</div>
+<div tabindex="0">
+<h2>Daten&shy;über&shy;mitt&shy;lun&shy;gen an Dritte</h2>
   <p>Eine Übermittlung deiner Daten an Dritte findet nicht statt, es sei denn, die Betreiber von »frag.jetzt« sind
     gesetzlich dazu verpflichtet. Soweit externe Dienstleister mit deinen personenbezogenen Daten in Kontakt kommen, wird durch
     rechtliche, technische und organisatorische Maßnahmen sowie durch regelmäßige Kontrollen sichergestellt, dass diese
     die Vorschriften der Datenschutzgesetze einhalten.
   </p>
-
-<h3>Links zu Webseiten anderer Anbieter</h3>
+</div>
+<div tabindex="0">
+<h2>Links zu Webseiten anderer Anbieter</h2>
   <p>»frag.jetzt« kann Links zu Webseiten anderer Anbieter enthalten, auf die sich diese Datenschutzerklärung nicht
     bezieht.
     Soweit mit der Nutzung der Internetseiten anderer Anbieter die Erhebung, Verarbeitung oder Nutzung personenbezogener
     Daten verbunden ist, beachte bitte die Datenschutzhinweise der jeweiligen Anbieter.
   </p>
+</div>
 
-<h3>Widerspruchs&shy;recht und Auskunfts&shy;recht</h3>
+<div tabindex="0">
+<h2>Widerspruchs&shy;recht und Auskunfts&shy;recht</h2>
   <p>Du hast jederzeit das Recht auf unentgeltliche Auskunft über deine gespeicherten personenbezogenen Daten, deren
     Herkunft und Empfänger, den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder Löschung
     dieser Daten.
@@ -73,14 +82,18 @@
     Bei Unklarheiten oder Anregungen wende dich an folgende E-Mail-Adresse oder an die im Impressum angegebenen
     Kontaktdaten: <a href = "mailto:klaus.quibeldey-cirkel@transmit.de">klaus.quibeldey-cirkel&shy;@transmit.de</a>
   </p>
-
-<h3>Verzeichnis von Ver&shy;arbeitungs&shy;tätig&shy;kei&shy;ten</h3>
+</div>
+<div tabindex="0">
+<h2>Verzeichnis von Ver&shy;arbeitungs&shy;tätig&shy;kei&shy;ten</h2>
   <p>Eine Übersicht über die in »frag.jetzt« verarbeiteten personenbezogenen Daten findest du im Projektarchiv unter <a href="https://git.thm.de/arsnova/frag.jetzt">https://git.thm.de/&shy;arsnova/&shy;frag.jetzt</a>.
   </p>
+</div>
 
-<h3>Änderungen der Daten&shy;schutz&shy;er&shy;klärung</h3>
+<div tabindex="0">
+<h2>Änderungen der Daten&shy;schutz&shy;er&shy;klärung</h2>
   <p>Wir behalten uns das Recht vor, diese Datenschutzerklärung jederzeit unter Beachtung der geltenden
     Datenschutzvorschriften zu ändern.
   </p>
 
   <p>Stand: 14.09.2019</p>
+</div>
