--- a/src/assets/i18n/data-protection/data-protection-en.html
+++ b/src/assets/i18n/data-protection/data-protection-en.html
@@ -1,8 +1,11 @@
-<h3>Principle</h3>
+<div tabindex="0">
+<h2>Principle</h2>
 <p>Your personal data will be treated confidentially. All actions are bound to the legal principles of the Hessian Data Protection Act (HDSG), the Telemedia Act (TMG), the EU Data Protection Basic Regulation (EU-DSGVO) and this data protection declaration. This is guaranteed by TransMIT GmH as operator of »frag.jetzt«.
 </p>
+</div>
 
-<h3>Usage data</h3>
+<div tabindex="0">
+<h2>Usage data</h2>
 <p>We collect, process and use personal data about the use of »frag.jetzt« (usage data) only to the extent necessary to enable the user to use »frag.jetzt«.
   Normally a registration for the use of »frag.jetzt« is not necessary.<br>
   <br>
@@ -14,12 +17,16 @@
   <br>
   If an account is not used within 180 days, the account will be automatically deleted without notice.
 </p>
+</div>
 
-<h3>Access data </h3>
+<div tabindex="0">
+<h2>Access data </h2>
 <p> Personal data will only be collected to the technically necessary extent of »frag.jetzt«. Apart from the e-mail address as the login name of a registered user, no personal data is stored.
 </p>
+</div>
 
-<h3>Log files</h3>
+<div tabindex="0">
+<h2>Log files</h2>
 <p>We automatically collect and store information in log files that your browser automatically transmits to us.
   These are:
   browser type and browser version,
@@ -29,34 +36,49 @@
   time of the server request.
   This data cannot be assigned to specific persons. This data is not merged with other data sources.
 </p>
+</div>
 
-<h3>Web Storage</h3>
+<div tabindex="0">
+<h2>Web Storage</h2>
 <p>»frag.jetzt« uses the so-called web storage technology.
   This means that data is stored locally in the cache of your browser and can continue to exist and be read even after you close the browser window or quit the program - unless you delete the cache.
 </p>
+</div>
 
-<h3>Data security</h3>
+<div tabindex="0">
+<h2>Data security</h2>
 <p>Comprehensive technical and operational protective measures have been taken to protect your data from accidental or intentional manipulation, loss, destruction or access by unauthorized persons. The security procedures are regularly reviewed and adapted to technological progress. However, data transmissions on the Internet (e.g. when communicating by e-mail) can have security gaps, so that complete protection of the data against access by third parties is not possible.
 </p>
+</div>
 
-<h3>Data transfers to third parties</h3>
+<div tabindex="0">
+<h2>Data transfers to third parties</h2>
 <p>A transmission of your data to third parties does not take place, unless the operators of »frag.jetzt« are legally obliged to do so. Insofar as external service providers come into contact with your personal data, legal, technical and organisational measures as well as regular checks will ensure that this data is not passed on to third parties. comply with the provisions of the data protection laws.
 </p>
+</div>
 
-<h3>Links to websites of other providers</h3>
+<div tabindex="0">
+<h2>Links to websites of other providers</h2>
 <p>»frag.jetzt« may contain links to other websites which are not covered by this privacy statement. If the collection, processing or use of personal data is associated with the use of the Internet pages of other providers, please observe the data protection information of the respective providers.
 </p>
+</div>
 
-<h3>Right to object and right to information </h3>
+<div tabindex="0">
+<h2>Right to object and right to information </h2>
 <p>You have the right at any time to free information about your stored personal data, their origin and recipient, the purpose of data processing and a right to correction, blocking or deletion of this data. In case of ambiguities or suggestions, please contact the following e-mail address or the contact details given in the imprint: <a href = "mailto:klaus.quibeldey-cirkel@transmit.de">klaus.quibeldey-cirkel&shy;@transmit.de</a>
 </p>
+</div>
 
-<h3>Directory of processing activities </h3>
+<div tabindex="0">
+<h2>Directory of processing activities </h2>
 <p>You can find an overview of the personal data processed in »frag.jetzt« in the repository at <a href="https://git.thm.de/arsnova/frag.jetzt">git.thm.de/&shy;arsnova/&shy;frag.jetzt</a>.
 </p>
+</div>
 
-<h3>Changes to the Data Protection & Privacy Policy</h3>
+<div tabindex="0">
+<h2>Changes to the Data Protection & Privacy Policy</h2>
 <p>We reserve the right to change this data protection statement at any time in accordance with the applicable data protection regulations.
 </p>
 
 <p>09/14/2019</p>
+</div>
